feat: enhance Post and Comment models to manage comments, update Firestore interactions, and add CommentResource